# AlbionInsight

./: .black.toml  .env.example  .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  Arquitetura Modular do Albion Insight.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.ar-SA.md  CONTRIBUTING.cs-CZ.md  CONTRIBUTING.da-DK.md  CONTRIBUTING.de-DE.md  CONTRIBUTING.el-GR.md  CONTRIBUTING.et-EE.md  CONTRIBUTING.fa-IR.md  CONTRIBUTING.fi-FI.md  CONTRIBUTING.fil-PH.md  CONTRIBUTING.fr-FR.md  CONTRIBUTING.he-IL.md  CONTRIBUTING.hi-IN.md  CONTRIBUTING.hu-HU.md  CONTRIBUTING.id-ID.md  CONTRIBUTING.it-IT.md  CONTRIBUTING.ko-KR.md  CONTRIBUTING.md  CONTRIBUTING.mn-MN.md  CONTRIBUTING.ms-MY.md  CONTRIBUTING.nl-NL.md  CONTRIBUTING.pl-PL.md  CONTRIBUTING.pt-BR.md  CONTRIBUTING.pt-PT.md  CONTRIBUTING.pt-br.md  CONTRIBUTING.ro-RO.md  CONTRIBUTING.sv-SE.md  CONTRIBUTING.th-TH.md  CONTRIBUTING.uk-UA.md  FAQ.md  GITHUB_BEST_PRACTICES.md  Guia de Instalação Segura no Linux.md  (+91 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  deploy-site.yml  python-ci.yml  tests.yml
albion_insight/: __main__.py  app.py  main.py
albion_insight/core/: exceptions.py  main_logic.py  models.py  network_tracker.py  protocol_decoder.py  sniffer_manager.py  sniffer_process.py
albion_insight/ui/: app.py  main_window.py
albion_insight/utils/: __init__.py  config.py  (+2 more)
tests/: test_helpers.py  test_models.py
wiki/: Architecture-Overview.es-ES.md  Architecture-Overview.md  Architecture-Overview.nl-NL.md  Architecture-Overview.pt-BR.md  Architecture-Overview.ru-RU.md  Arquitetura-do-Projeto.md  CONTRIBUTING_GUIDE.md  Contribution-Guide.md  Contribution-Guide.pt-BR.md  FAQ.md  FAQ.pt-BR.md  Guia de Contribuição Geral.md  Guia de Solução de Problemas.md  Guia para Desenvolvedores.md  Guia-de-Contribuicao.md  Home.en-US.md  Home.fr-FR.md  Home.ko-KR.md  Home.md  Home.pt-BR.md  Home.uk-UA.md  Home.zh-HK.md  Installation-Guide.md  Installation-Guide.md.old  Melhores-Praticas-de-Codigo.md  Photon-Protocol-Decodification.md  Photon-Protocol-Decoding.md  Photon-Protocol-Decoding.pt-BR.md  Refactoring-Guide.md  Roadmap.md  Roadmap.pt-BR.md  Solucao-de-Problemas-Comuns.md  Technical-Details-Photon-Protocol.md  Test-Page.md  Troubleshooting.pt-BR.md  Usage-Guide.md
(+40 files in other folders)
