[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "albion-insight"
version = "1.0.0"
description = "A cross-platform statistics analysis tool for Albion Online"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "dexcarva", email = "contact@example.com"}
]
keywords = ["albion", "online", "statistics", "damage-meter", "network-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Gamers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "scapy~=2.6.1",
    "flet~=0.28.3",
    "anyio~=4.12.0",
    "pydantic~=2.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "black==23.7.0",
    "flake8~=7.0.0",
    "mypy~=1.8.0",
    "pylint~=3.0.0",
    "isort~=5.13.2",
    "pre-commit~=3.6.0",
]

[project.urls]
Homepage = "https://github.com/dexcarva/AlbionInsight"
Documentation = "https://dexcarva.github.io/AlbionInsight/"
Repository = "https://github.com/dexcarva/AlbionInsight.git"
Issues = "https://github.com/dexcarva/AlbionInsight/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
py_version = "38"
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
strict_optional = true
mypy_path = "albion_insight"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=albion_insight --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["albion_insight"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
